--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             back of the sanctuary.
             <br />
             <br />
-            <strong><a href="https://www.vmumc.org/GLOW.html">GLOW</a></strong
+            <strong><a href="/GLOW.html">GLOW</a></strong
             >,
             (<strong>G</strong>od&nbsp;<strong>L</strong>ights&nbsp;<strong>O</strong>ur&nbsp;<strong>W</strong>ay),
             our children's program, is held at the same time as the Sunday
@@ -158,8 +158,7 @@
           <p>
             Our <strong>Wednesday night</strong> program for youth
             <strong>kindergarten through 6th grade</strong> is
-            <strong
-              >Kids' <a href="https://www.vmumc.org/JAM.html">JAM</a></strong
+            <strong>Kids' <a href="/JAM.html">JAM</a></strong
             >. It runs <strong>6:00-7:30 PM</strong>.
           </p>
           <!-- Paragraph about the staffed nursery -->
@@ -214,7 +213,7 @@
             are called to act in the world.
           </p>
           <p>
-            <a href="https://www.vmumc.org/pastorsmessage.html"
+            <a href="/pastorsmessage.html"
               >Click here to read Rev. Beth's Monthly Message.</a
             >
           </p>
@@ -245,7 +244,7 @@
           </p>
           <!-- Link to directions to the church -->
           <p>
-            <a href="https://www.vmumc.org/vanmeterumcdirections.html"
+            <a href="/directions.html"
               >Click here for directions on how to find us.</a
             >
           </p>
@@ -280,15 +279,12 @@
               <p>
                 <strong>Ash Wednesday and Lent</strong>
                 <br />
-                <a href="https://www.vmumc.org/pastorsmessageAshWednesday.html"
-                  >Ash Wednesday</a
-                >
+                <a href="/pastorsmessageAshWednesday.html">Ash Wednesday</a>
                 marks the beginning of
-                <a href="https://www.vmumc.org/pastorsmessageLent.html"
-                  >the Lenten season</a
-                >. In this 40-day period, Christians worldwide prepare our
-                hearts for Jesus' death on the cross and his resurrection three
-                days later on Easter.
+                <a href="/pastorsmessageLent.html">the Lenten season</a>. In
+                this 40-day period, Christians worldwide prepare our hearts for
+                Jesus' death on the cross and his resurrection three days later
+                on Easter.
               </p>
             </div>
             <!-- Second nested column with width 3 for image -->
@@ -334,7 +330,7 @@
               </p>
               <!-- Additional paragraph with link to learn more about youth meetings and activities -->
               <p>
-                <a href="https://www.vmumc.org/ciayouth.html"
+                <a href="/ciayouth.html"
                   >Learn more about youth meetings and activites here.</a
                 >
               </p>
@@ -388,9 +384,7 @@
               <br />
               6:00-7:30 PM
               <br />
-              <a href="https://www.vmumc.org/JAM.html"
-                >Kids' J.A.M. (Jesus and Me)</a
-              >
+              <a href="/JAM.html">Kids' J.A.M. (Jesus and Me)</a>
               <br />
             </strong>
             This is our Wednesday night program for elementary-age students to
@@ -623,9 +617,7 @@
             <strong>Bread Ministry</strong>
             <br />
             We have a
-            <a href="https://www.vmumc.org/MinistryBread.html"
-              >bread ministry</a
-            >
+            <a href="/MinistryBread.html">bread ministry</a>
             in cooperation with Panera Bread company. We need help picking up
             packages from Panera and bringing them to the church. Sign up for a
             one-time delivery or several.
