--- a/ministries.html
+++ b/ministries.html
@@ -134,13 +134,9 @@
       </div>
       <div class="row mx-auto text-center pt-3">
         <hr />
-        <button
-          class="btn btn-outline-secondary my-3"
-          type="button"
-          onclick="window.location.href='/missionmoment.html';"
-        >
+        <a class="btn btn-outline-secondary my-3" href="/missionmoment.html">
           View The Latest Mission Moment
-        </button>
+        </a>
         <h2>Church Outreach</h2>
       </div>
       <div
