--- a/worship.html
+++ b/worship.html
@@ -150,7 +150,7 @@
           </div>
           <div class="col-lg-1 align-self-center text-center">
             <p>
-              <a href="https://www.vmumc.org/JAM.html">
+              <a href="/JAM.html">
                 <img
                   src="./images/JAM_logo.png"
                   width="114"
