--- a/ciayouth.html
+++ b/ciayouth.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <!-- Required Scripts -->
+    <!-- Importing JavaScript files for navbar functionality -->
     <script src="navbar.js" defer></script>
-    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Importing Bootstrap library for enhanced styling and functionality -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- End Scripts -->
+
     <!-- Required Stylesheets -->
+    <!-- Importing Bootstrap CSS for styling -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
+    <!-- Custom CSS for additional styling -->
     <link rel="stylesheet" href="./index.css" />
     <!-- End Stylesheets -->
+
+    <!-- Meta tags -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Van Meter United Methodist Church</title>
   </head>
+
+  <!-- Body starts here -->
   <body>
-    <!-- Banner -->
+    <!-- Banner section -->
     <div class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0">
       <img class="w-100" src="./images/websitebanner.jpg" />
     </div>
     <!-- End Banner -->
-    <!-- Navbar -->
+
+    <!-- Navbar section -->
     <div class="container mx-auto p-0">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
+        <!-- Navbar toggler for smaller screens -->
         <button
           class="navbar-toggler"
           type="button"
@@ -37,14 +48,18 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
+        <!-- Navbar content -->
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <!-- Navbar links -->
           <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
+            <!-- Navigation links -->
             <li class="nav-item">
               <a class="nav-link" href="/index.html"> Home </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/kidscare.html"> Kids Care </a>
             </li>
+            <!-- Dropdown menu for 'Our Church' section -->
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -56,6 +71,7 @@
               >
                 Our Church
               </a>
+              <!-- Dropdown menu items -->
               <div
                 class="dropdown-menu dropdown-menu-dark bg-dark shadow"
                 aria-labelledby="dropdown08"
@@ -78,14 +94,13 @@
                 </a>
               </div>
             </li>
-
+            <!-- Additional navigation links -->
             <li class="nav-item">
               <a class="nav-link" href="/worship.html"> Worship </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/ministries.html"> Ministries </a>
             </li>
-
             <li class="nav-item">
               <a class="nav-link" href="/photos.html"> Photos </a>
             </li>
@@ -95,6 +110,7 @@
             <li class="nav-item">
               <a class="nav-link" href="/publications.html"> Publications </a>
             </li>
+            <!-- Dropdown menu for 'Contact Us' section -->
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -106,6 +122,7 @@
               >
                 Contact Us
               </a>
+              <!-- Dropdown menu items -->
               <div
                 class="dropdown-menu dropdown-menu-dark bg-dark shadow"
                 aria-labelledby="dropdown08"
@@ -128,32 +145,109 @@
     </div>
     <!-- End Navbar -->
 
-    <div class="px-3 mx-auto container bg">
+    <div class="container mx-auto px-3 bg">
+      <!-- Content sections -->
+      <!-- Row with padding top 5 and centered content -->
       <div class="row pt-5 mx-auto text-center">
-        <h1>The Journey with God</h1>
+        <h1>S.W.A.G: Van Meter UMC Youth Group</h1>
       </div>
-      <div class="row text-center pt-3 mx-auto">
-        <div class="col">
-          <p>
-            Nurturing children,<br />
-            supporting families,<br />
-            creating community<br />
-            as we share our faith.
-          </p>
+      <div class="row pt-3 mx-auto text-center">
+        <hr />
+      </div>
+      <div class="row d-flex justify-content-center pt-3 mx-auto text-center">
+        <div class="col-lg-9">
+          <img
+            class="w-50"
+            src="./images/youth01.jpg"
+            alt="Van Meter United Methodist youth group"
+          />
         </div>
       </div>
-      <div class="row text-center pt-3 mx-auto">
-        <a
-          class="btn btn-outline-secondary my-3"
-          href="https://www.umc.org/en/who-we-are/what-we-believe"
-        >
-          For a deeper discussion of our faith
-        </a>
+      <div class="row mx-auto pt-4 text-center">
+        <h4>
+          S.W.A.G. Youth Group<br />
+          "Saved With Amazing Grace"
+        </h4>
       </div>
-      <div class="row text-center pt-3 mx-auto">
-        <div class="col">
-          <img class="w-50" src="./images/churchFaith.jpg" />
-        </div>
+      <div class="row mx-auto pt-3 text-center">
+        <p>
+          Area youth are invited to participate in both mission projects and
+          fellowship fun.<br />
+          <strong>You need not be a church member to join us</strong>, <br />
+          and we welcome youth who wish to participate in a specific event even
+          if they do not regularly attend our meetings.<br />
+          We do need to know in advance if you want to join us for a project or
+          outing.
+        </p>
+      </div>
+      <div class="row mx-auto pt-3 text-center">
+        <p>
+          <strong>Regular meetings</strong> are<br />
+          <strong>March 3 &amp; 17</strong> Middle School youth<br />
+          <strong>March 10 &amp; 24</strong> High School youth <br />
+          We meet <strong>Sundays</strong> from
+          <strong>6:30-7:30 PM</strong> (alternating middle- and high-school
+          youth groups)<br />
+          in the church sanctuary through the end of the school year.
+        </p>
+      </div>
+      <div class="row mx-auto pt-3 text-center">
+        <p>
+          We will have at least one mission activity and one social activity
+          each month. <br />
+          Please come and join us, and bring a friend!
+        </p>
+      </div>
+      <div class="row mx-auto pt-3 text-center">
+        <p>
+          <strong
+            >Service Project <br />
+            Sunday, March 10, 2024 </strong
+          ><br />
+          We will be going to the Bidwell Food Pantry to volunteer.<a
+            href="https://www.signupgenius.com/go/70A0C4CACAB2AABFC1-47224683-ronald"
+          ></a
+          ><br />
+        </p>
+      </div>
+      <div class="row mx-auto pt-3 text-center">
+        <p>
+          <strong
+            >"Spare Time"<br />
+            Tuesday, March 26</strong
+          ><br />
+          Join us for a night of fun and fellowship.<strong></strong><br />
+          <br />
+          If you are interested in either of these outings,<strong>
+            text Courtney at 515-619-3968.</strong
+          >
+        </p>
+      </div>
+      <div class="row mx-auto pt-3 text-center">
+        <h4>
+          <strong>What We Do at the Van Meter UMC S.W.A.G. Youth Group </strong>
+        </h4>
+      </div>
+      <div class="row mx-auto pt-3 text-center">
+        <p>
+          This is a time of thoughtful discussion, fellowship, service, and fun
+          for youth in grades 6-12.
+          <br />
+          Our past activities included missions work, outdoor adventures,
+          twice-monthly meetings, lock-ins, <br />
+          Christian concerts, fund-raising, and church potlucks. In years past,
+          our missions work included collecting <br />
+          items for women's shelters, gathering donations for an animal shelter,
+          and serving supper for the homeless.
+        </p>
+      </div>
+      <div class="row mx-auto pt-3 text-center">
+        <img
+          src="./images/youthSWAG.jpg"
+          width="850"
+          height="1100"
+          alt="Youth Group:  Adventure, Service"
+        />
       </div>
     </div>
     <!-- Start Footer -->
