--- a/pastorsmessageLent.html
+++ b/pastorsmessageLent.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <!-- Required Scripts -->
+    <!-- Importing JavaScript files for navbar functionality -->
     <script src="navbar.js" defer></script>
-    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Importing Bootstrap library for enhanced styling and functionality -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- End Scripts -->
+
     <!-- Required Stylesheets -->
+    <!-- Importing Bootstrap CSS for styling -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
+    <!-- Custom CSS for additional styling -->
     <link rel="stylesheet" href="./index.css" />
     <!-- End Stylesheets -->
+
+    <!-- Meta tags -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Van Meter United Methodist Church</title>
   </head>
+
+  <!-- Body starts here -->
   <body>
-    <!-- Banner -->
+    <!-- Banner section -->
     <div class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0">
       <img class="w-100" src="./images/websitebanner.jpg" />
     </div>
     <!-- End Banner -->
-    <!-- Navbar -->
+
+    <!-- Navbar section -->
     <div class="container mx-auto p-0">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
+        <!-- Navbar toggler for smaller screens -->
         <button
           class="navbar-toggler"
           type="button"
@@ -37,14 +48,18 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
+        <!-- Navbar content -->
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <!-- Navbar links -->
           <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
+            <!-- Navigation links -->
             <li class="nav-item">
               <a class="nav-link" href="/index.html"> Home </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/kidscare.html"> Kids Care </a>
             </li>
+            <!-- Dropdown menu for 'Our Church' section -->
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -56,6 +71,7 @@
               >
                 Our Church
               </a>
+              <!-- Dropdown menu items -->
               <div
                 class="dropdown-menu dropdown-menu-dark bg-dark shadow"
                 aria-labelledby="dropdown08"
@@ -78,14 +94,13 @@
                 </a>
               </div>
             </li>
-
+            <!-- Additional navigation links -->
             <li class="nav-item">
               <a class="nav-link" href="/worship.html"> Worship </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/ministries.html"> Ministries </a>
             </li>
-
             <li class="nav-item">
               <a class="nav-link" href="/photos.html"> Photos </a>
             </li>
@@ -95,6 +110,7 @@
             <li class="nav-item">
               <a class="nav-link" href="/publications.html"> Publications </a>
             </li>
+            <!-- Dropdown menu for 'Contact Us' section -->
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -106,6 +122,7 @@
               >
                 Contact Us
               </a>
+              <!-- Dropdown menu items -->
               <div
                 class="dropdown-menu dropdown-menu-dark bg-dark shadow"
                 aria-labelledby="dropdown08"
@@ -128,31 +145,48 @@
     </div>
     <!-- End Navbar -->
 
-    <div class="px-3 mx-auto container bg">
+    <div class="container mx-auto px-3 bg">
+      <!-- Content sections -->
+      <!-- Row with padding top 5 and centered content -->
       <div class="row pt-5 mx-auto text-center">
-        <h1>The Journey with God</h1>
+        <h1>Learning About the Practices of Our Faith</h1>
       </div>
-      <div class="row text-center pt-3 mx-auto">
-        <div class="col">
-          <p>
-            Nurturing children,<br />
-            supporting families,<br />
-            creating community<br />
-            as we share our faith.
-          </p>
+      <div class="row pt-3 mx-auto text-center"><h2>Lent</h2></div>
+      <div class="row pt-3 mx-auto text-center"><hr /></div>
+      <div class="row pt-3 mx-auto">
+        <!-- Column with width 6 for spacing -->
+        <div class="col-lg-6 align-self-center text-center">
+          <div class="row">
+            <div class="col-lg-4">
+              <img src="./images/PastorBeth2.jpg" alt="Pastor Beth" />
+              <p>Rev. Beth</p>
+            </div>
+            <div class="col-lg-8 align-self-center text-center pb-lg-4">
+              <h2>Why do some people give up something for Lent?</h2>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="row text-center pt-3 mx-auto">
-        <a
-          class="btn btn-outline-secondary my-3"
-          href="https://www.umc.org/en/who-we-are/what-we-believe"
-        >
-          For a deeper discussion of our faith
-        </a>
-      </div>
-      <div class="row text-center pt-3 mx-auto">
-        <div class="col">
-          <img class="w-50" src="./images/churchFaith.jpg" />
+        <!-- Column with width 2, vertically centered and text centered -->
+        <div class="col-lg-6">
+          <div class="row">
+            <p>
+              Just as Christ sacrificed Himself for us, giving up something we
+              enjoy helps us be mindful of Jesus' suffering. Lent is an
+              intentional time of deepening or growing our faith, so rather than
+              "giving up" you might want to commit to "adding to" or beginning a
+              new spiritual practice.
+            </p>
+          </div>
+          <div class="row">
+            <p>
+              Examples could include doing an intentional act of kindness for a
+              stranger daily, reading your Bible, committing to a specified
+              amount of time spent in daily prayer or meditation, or beginning a
+              devotional time. Whether you choose to give up or add to, you can
+              be humble and hopeful that your Lenten practice will deepen your
+              faith.
+            </p>
+          </div>
         </div>
       </div>
     </div>
