--- a/index.html
+++ b/index.html
@@ -421,9 +421,7 @@
           <!-- Paragraph with information about Missions of the Month -->
           <p>
             <strong
-              ><a href="https://www.vmumc.org/missionmoment.html"
-                >Missions of the Month</a
-              ><br
+              ><a href="/missionmoment.html">Missions of the Month</a><br
             /></strong>
             Our church has adopted a room at the Hope Center for Women and
             Children, funding shelter, meals, essential personal items, support
@@ -435,7 +433,7 @@
         <div class="col-lg-3 align-self-center text-center">
           <!-- Image for Missions of the Month -->
           <p>
-            <a href="https://www.vmumc.org/missionmoment.html">
+            <a href="/missionmoment.html">
               <img
                 src="./images/missions_soap.jpg"
                 width="186"
@@ -681,7 +679,7 @@
       <!-- Twelfth Section -->
       <!-- Row with no margin -->
       <!-- Column with width 12 for disclaimer -->
-      <div class="row mx-auto">
+      <div class="row mx-auto text-center">
         <!-- Disclaimer about the Cross and Flame trademark -->
         <em>
           The Cross and Flame is a registered trademark and the use is
