--- a/3rdGradeBibleClass.html
+++ b/3rdGradeBibleClass.html
@@ -130,25 +130,42 @@
 
     <div class="px-3 mx-auto container bg">
       <div class="row pt-5 mx-auto text-center">
-        <h1>Days in the Life of the Church</h1>
+        <h1>Bible Giving</h1>
       </div>
       <div class="row pt-3 mx-auto"><hr /></div>
-      <div class="row mx-auto text-center pt-3">
-        <img
-          src="./images//Highlights2023-1.jpg"
-          alt="photos of the church at worship, in service, and at Wednesday night's kids time"
-        />
+      <div class="row pt-3 mx-auto">
+        <p>
+          Each fall, our church celebrates the giving of Bibles in our worship
+          by giving a Bible story book to our kindergarteners, an
+          age-appropriate Bible to our third graders, and (during confirmation
+          years) a study Bible to our confirmands.
+        </p>
+      </div>
+      <div class="row mx-auto">
+        <p>
+          By the third grade, students are developing the reading skills to
+          benefit from having a Bible of their very own. By providing age
+          appropriate Bibles, we are trying to encourage more interest and
+          understanding of the spiritual presence of the Living Word that can be
+          found there. During J.A.M. (Jesus and Me) and the lessons sent home,
+          church families can develop reading time together from the timeless
+          stories and life lessons to be found here.
+        </p>
+      </div>
+      <div class="row mx-auto">
+        <p>
+          Your support and partnering with the Holy in forming your child's
+          growing faith can arise through simply reading these good books. The
+          giving of Bibles also provides an opportunity for the church to
+          witness our faith in the sharing of the Word of our God.
+        </p>
       </div>
       <div class="row mx-auto text-center pt-3">
         <img
-          src="./images/Highlights2023-2.jpg"
-          alt="photos of children having fun at Vacation Bible School and with their backpacks at a blessing"
-        />
-      </div>
-      <div class="row mx-auto text-center pt-3">
-        <img
-          src="./images/Highlights2023-3.jpg"
-          alt="photos of the church in fellowship, serving food and eating together; photos of singing at worship and in rehearsal"
+          class="w-100"
+          src="./images/BibleGiving2023.jpg"
+          alt='montage of children receiving Bibles and looking at them.
+        "Giving Bilbes Celebrating the foundation of our faith by presenting age-appropriate Bibles to our kindergarteners, third-graders, and confirmands."'
         />
       </div>
     </div>
