--- a/MinistryConfirmation.html
+++ b/MinistryConfirmation.html
@@ -130,25 +130,43 @@
 
     <div class="px-3 mx-auto container bg">
       <div class="row pt-5 mx-auto text-center">
-        <h1>Days in the Life of the Church</h1>
+        <h1>Confirmation</h1>
       </div>
-      <div class="row pt-3 mx-auto"><hr /></div>
+      <div class="row pt-3 mx-auto text-center">
+        <hr />
+      </div>
+      <div class="row pt-3 mx-auto">
+        <p>
+          Every other year, we hold confirmation classes for youth in grades 7
+          and 8. Each youth receives his or her own special study Bible during
+          Bible week in September. Classes are held twice a month for the next
+          half year thereafter. Confirmands regularly serve as worship helpers
+          and participate in special services such as Good Friday and Ash
+          Wednesday. Together they visit other faith communities and take part
+          in mission service projects. The confirmation ceremony is held in
+          April.
+        </p>
+      </div>
       <div class="row mx-auto text-center pt-3">
         <img
-          src="./images//Highlights2023-1.jpg"
-          alt="photos of the church at worship, in service, and at Wednesday night's kids time"
+          class="w-100"
+          src="./images/MinistryConfirmation01.jpg"
+          alt="Confirmation:  learning our history, exploring our faith, and making friends"
         />
       </div>
       <div class="row mx-auto text-center pt-3">
         <img
-          src="./images/Highlights2023-2.jpg"
-          alt="photos of children having fun at Vacation Bible School and with their backpacks at a blessing"
+          class="w-100"
+          src="./images/MinistryConfirmation02.jpg"
+          alt="images of visits to:
+        monastery; Temple B'nai Eshurun synagogue; Sinsinawa labyrinth, sanctuary, and nunnery; Martin Luther statue at Wartburg seminary"
         />
       </div>
       <div class="row mx-auto text-center pt-3">
         <img
-          src="./images/Highlights2023-3.jpg"
-          alt="photos of the church in fellowship, serving food and eating together; photos of singing at worship and in rehearsal"
+          class="w-100"
+          src="./images/MinistryConfirmation03.jpg"
+          alt='picture collection showing field trip to "Field of Dreams" and images of baptism and confirmation ceremony.'
         />
       </div>
     </div>
