Fixed index images not lining up right

--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
               <p>
                 <a href="https://www.vmumc.org/ciayouth.html">
                   <img
+                    class="ms-md-1 ms-lg-4"
                     src="./images/Lent.png"
                     width="167"
                     height="163"
@@ -341,6 +342,7 @@
               <p>
                 <a href="https://www.vmumc.org/ciayouth.html">
                   <img
+                    class="ms-md-1 ms-lg-4"
                     src="./images/youth01.jpg"
                     width="200"
                     height="139"
