--- a/kidsCare.html
+++ b/kidsCare.html
@@ -128,11 +128,14 @@
       </nav>
     </div>
     <!-- End Navbar -->
-    <div class="container bg pt-5 mx-auto">
-      <div class="row mx-auto text-center">
+    <div class="container bg mx-auto">
+      <div class="row mx-auto text-center pt-5">
         <h1>Welcome to Van Meter United Methodist Kids Care</h1>
       </div>
-      <div class="row mx-auto text-center">
+      <div class="row mx-auto text-center pt-3">
+        <hr />
+      </div>
+      <div class="row mx-auto text-center pt-3">
         <div class="col-lg-4">
           <strong>Director: Jess Jaspers</strong>
         </div>
@@ -143,7 +146,7 @@
           <strong>Email: kidscare@vmumc.com</strong>
         </div>
       </div>
-      <div class="row mx-auto">
+      <div class="row mx-auto pt-3">
         <p>
           <br />
           <a href="https://www.vmumc.org/Publications/KidsCarePrintable.pdf">
@@ -151,7 +154,7 @@
           </a>
         </p>
       </div>
-      <div class="row mx-auto">
+      <div class="row mx-auto pt-3">
         <p>
           <strong>Registration forms:</strong>
         </p>
@@ -220,7 +223,7 @@
         </div>
       </div>
 
-      <div class="row mx-auto pt-4">
+      <div class="row mx-auto pt-3">
         <hr />
         <strong>Statement of Purpose</strong>
 
@@ -252,7 +255,7 @@
           </li>
         </ul>
       </div>
-      <div class="row mx-auto">
+      <div class="row mx-auto pt-3">
         <p>
           <strong>Kids Care Schedule</strong>
         </p>
@@ -284,7 +287,7 @@
           Friday: 6:30 a.m. - 5:45 p.m.
         </p>
       </div>
-      <div class="row mx-auto">
+      <div class="row mx-auto pt-3">
         <ul class="ms-3">
           <li>
             We are closed on all major holidays: part of Christmas break,
@@ -308,14 +311,14 @@
           <li>We are closed Memorial Day.</li>
         </ul>
       </div>
-      <div class="row mx-auto">
+      <div class="row mx-auto pt-3">
         <strong>K-5 Transportation to/from School</strong>
         <p>
           The school provides bus transportation. Pick Up is at approximately
           7:50 a.m. and drop off at approximately 3:15 p.m.
         </p>
       </div>
-      <div class="row mx-auto">
+      <div class="row mx-auto pt-3">
         <p>
           <strong>
             <a href="https://www.vmumc.org/Publications/KidsCarePrintable.pdf">
@@ -324,7 +327,7 @@
           </strong>
         </p>
       </div>
-      <div class="row align-self-center mx-auto">
+      <div class="row align-self-center mx-auto pt-3">
         <p>
           <img
             src="./images/KidsCareFun.jpg"
@@ -333,7 +336,7 @@
           />
         </p>
       </div>
-      <div class="row text-center mx-auto">
+      <div class="row text-center mx-auto pt-3">
         <h3>Director: Jess Jaspers</h3>
         <div class="col-lg-6">
           <h3>Phone: 491-1198</h3>
