Added missing alts

--- a/MinistryEasterEggHunt.html
+++ b/MinistryEasterEggHunt.html
@@ -139,7 +139,7 @@
       <div class="row mx-auto text-center pt-3">
         <img
           src="./images/MinistryEasterHunt2022.jpg"
-          alt="Kids' Shopping Day.  Elves help kids shop.  Gifts are wrapped so they stay a surprise. Parents wait outside.  Van Meter Methodists and Baptists partner on this project."
+          alt="Easter Sunday egg hunt"
         />
       </div>
     </div>
