--- a/VBS.html
+++ b/VBS.html
@@ -172,6 +172,7 @@
             <img
               class="bd-placeholder-img card-img-top"
               src="./images/VBS2023storytime.jpg"
+              alt="storytime in a setting with blankets and colorful wall hangings"
             />
             <div class="card-body">
               <p class="card-text">Storytime</p>
@@ -183,6 +184,7 @@
             <img
               class="bd-placeholder-img card-img-top"
               src="./images/VBS2023crafts.jpg"
+              alt="crafts - child connects stars to make a constellation"
             />
             <div class="card-body">
               <p class="card-text">Crafts</p>
@@ -196,6 +198,7 @@
             <img
               class="bd-placeholder-img card-img-top"
               src="./images/VBS2023imagination_station.jpg"
+              alt="a teen guides six children through an experiment"
             />
             <div class="card-body">
               <p class="card-text">Imagination Station (Science)</p>
@@ -207,6 +210,7 @@
             <img
               class="bd-placeholder-img card-img-top"
               src="./images/VBS2023dance2.jpg"
+              alt="children dancing"
             />
             <div class="card-body">
               <p class="card-text">Singing and Dancing</p>
@@ -220,6 +224,7 @@
             <img
               class="bd-placeholder-img card-img-top"
               src="./images/VBS2023outdoor_play1.jpg"
+              alt="a boy and girl play tug-of-war with a pool noodle"
             />
             <div class="card-body">
               <p class="card-text">Outdoor Games</p>
@@ -231,6 +236,7 @@
             <img
               class="bd-placeholder-img card-img-top"
               src="./images/VBS2023outdoor_play2.jpg"
+              alt="children play on the church lawn"
             />
             <div class="card-body">
               <p class="card-text">More Outdoor Games</p>
@@ -245,6 +251,7 @@
             <img
               class="bd-placeholder-img card-img-top"
               src="./images/VBS2023snacks.jpg"
+              alt="two girls enjoy ice cream sandwiches"
             />
             <div class="card-body">
               <p class="card-text">Snacks</p>
@@ -256,6 +263,7 @@
             <img
               class="bd-placeholder-img card-img-top"
               src="./images/VBS2023fun.jpg"
+              alt="teen helpers dressed as astronauts"
             />
             <div class="card-body">
               <p class="card-text">VBS!!!</p>
