--- a/directions.html
+++ b/directions.html
@@ -134,10 +134,7 @@
       </div>
       <div class="row mx-auto pt-3">
         <div class="col-lg-5 text-center align-self-center">
-          <img
-            src="./images/vanmeterchurch.jpg"
-            alt="Welcome (family walking through church doors)"
-          />
+          <img src="./images/vanmeterchurch.jpg" alt="Van Meter UMC" />
         </div>
         <div class="col-lg-6 align-self-center my-4">
           <strong>
