--- a/education.html
+++ b/education.html
@@ -178,7 +178,11 @@
           </div>
         </div>
         <div class="col-lg-5 text-center">
-          <img class="w-75" src="./images/JAM_logo_black.jpg" />
+          <img
+            class="w-75"
+            src="./images/JAM_logo_black.jpg"
+            alt="JAM (Jesus and Me) Wednesday night kigs' program at Van Meter UMC.  Image is a black cross on colorful paint splatter on black background."
+          />
         </div>
       </div>
       <div class="row mx-auto pt-5 text-center">
