--- a/publications.html
+++ b/publications.html
@@ -142,18 +142,19 @@
               class="bd-placeholder-img card-img-top"
               width="100%"
               src="./images/vanmeterbulletinimage.jpg"
+              alt="Van Meter Church Bulletin"
             />
             <div class="card-body">
               <p class="card-text">Van Meter Church Bulletin</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button
+                  <a
                     type="button"
                     class="btn btn-sm btn-outline-secondary"
-                    onclick="window.location.href='https://www.vmumc.org/Publications/vmbulletin.pdf';"
+                    href="https://www.vmumc.org/Publications/vmbulletin.pdf"
                   >
                     View
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -166,18 +167,19 @@
               class="bd-placeholder-img card-img-top"
               width="100%"
               src="./images/BibleVerses.jpg"
+              alt="BibleVerses for the Week"
             />
             <div class="card-body">
               <p class="card-text">Bible Verses for the week</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button
+                  <a
                     type="button"
                     class="btn btn-sm btn-outline-secondary"
-                    onclick="window.location.href='https://www.vmumc.org/Publications/LiturgyThisWeek.pdf';"
+                    href="https://www.vmumc.org/Publications/LiturgyThisWeek.pdf"
                   >
                     View
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -190,18 +192,19 @@
               class="bd-placeholder-img card-img-top"
               width="100%"
               src="./images/newsletterimage.jpg"
+              alt="The Van Meter UMC Newsletter"
             />
             <div class="card-body">
               <p class="card-text">The Van Meter Newsletter</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button
+                  <a
                     type="button"
                     class="btn btn-sm btn-outline-secondary"
-                    onclick="window.location.href='https://www.vmumc.org/Publications/churchnewsletter.pdf';"
+                    href="https://www.vmumc.org/Publications/churchnewsletter.pdf"
                   >
                     View
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -214,18 +217,19 @@
               class="bd-placeholder-img card-img-top"
               width="100%"
               src="./images/GrapevineIcon.jpg"
+              alt="Grapevine tells weekly news"
             />
             <div class="card-body">
               <p class="card-text">Our Sunday news bulletin</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button
+                  <a
                     type="button"
                     class="btn btn-sm btn-outline-secondary"
-                    onclick="window.location.href='https://www.vmumc.org/Publications/VMgrapevine.pdf';"
+                    href="https://www.vmumc.org/Publications/VMgrapevine.pdf"
                   >
                     View
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -238,18 +242,19 @@
               class="bd-placeholder-img card-img-top"
               width="100%"
               src="./images/devotionUpperRoom.jpg"
+              alt="Upper Room Daily Devotional Guide"
             />
             <div class="card-body">
               <p class="card-text">Daily Devotions: The Upper Room</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button
+                  <a
                     type="button"
                     class="btn btn-sm btn-outline-secondary"
-                    onclick="window.location.href='https://www.upperroom.org/devotionals';"
+                    href="https://www.upperroom.org/devotionals"
                   >
                     View
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -262,18 +267,19 @@
               class="bd-placeholder-img card-img-top"
               width="100%"
               src="./images/devotion365.jpg"
+              alt="Devotionals 365 days a year:  pause, listen, think, pray, go"
             />
             <div class="card-body">
               <p class="card-text">d365: Devotionals 365 days a year</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group mt-auto">
-                  <button
+                  <a
                     type="button"
                     class="btn btn-sm btn-outline-secondary"
-                    onclick="window.location.href='https://d365.org/';"
+                    href="https://d365.org/"
                   >
                     View
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -285,18 +291,19 @@
               class="bd-placeholder-img card-img-top"
               width="100%"
               src="http://media.salemwebnetwork.com/biblestudytools3/theme/default//master-banner-logo.png"
+              alt="Online Bible and Study Tools"
             />
             <div class="card-body">
               <p class="card-text">Online Bible and Study Tools</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group mt-auto">
-                  <button
+                  <a
                     type="button"
                     class="btn btn-sm btn-outline-secondary"
-                    onclick="window.location.href='http://www.biblestudytools.com/';"
+                    href="http://www.biblestudytools.com/"
                   >
                     View
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
