--- a/services.html
+++ b/services.html
@@ -134,7 +134,11 @@
       </div>
       <div class="row text-center pt-3 mx-auto">
         <div class="col">
-          <img class="w-50" src="./images/congregation.jpg" />
+          <img
+            class="w-50"
+            src="./images/congregation.jpg"
+            alt="view of sanctuary from the front"
+          />
         </div>
       </div>
       <div class="row text-center pt-3 mx-auto">
@@ -149,7 +153,11 @@
       </div>
       <div class="row text-center pt-3 mx-auto">
         <div class="col">
-          <img class="w-50" src="./images/congregation2.jpg" />
+          <img
+            class="w-50"
+            src="./images/congregation2.jpg"
+            alt="view of sanctuary from rear at Christmas"
+          />
         </div>
       </div>
     </div>
