--- a/GLOW.html
+++ b/GLOW.html
@@ -170,7 +170,11 @@
           </div>
         </div>
         <div class="col-lg-5 text-center">
-          <img class="w-75" src="./images/GLOW_logo2alt.jpg" />
+          <img
+            class="w-75"
+            src="./images/GLOW_logo2alt.jpg"
+            alt="God Lights Our Way GLOW -- letters against a swirled array of glowing tubes of  color"
+          />
         </div>
       </div>
     </div>
