--- a/JAM.html
+++ b/JAM.html
@@ -181,25 +181,45 @@
           </div>
         </div>
         <div class="col-lg-6 text-center">
-          <img class="w-75" src="./images/JAM_logo_black.jpg" />
+          <img
+            class="w-75"
+            src="./images/JAM_logo_black.jpg"
+            alt="JAM (Jesus and Me) Wednesday night kids' program at Van Meter UMC.  Image is a black cross on colorful paint splatter on black background."
+          />
         </div>
       </div>
 
       <div class="row pt-3 mx-auto">
         <div class="col-lg-6 align-self-center">
-          <img class="w-100" src="./images/JAMweb1.jpg" />
+          <img
+            class="w-100"
+            src="./images/JAMweb1.jpg"
+            alt="children play an egg-on-spoon game"
+          />
         </div>
         <div class="col-lg-6 align-self-center pt-3 pt-lg-0">
-          <img class="w-100" src="./images/JAMweb2.jpg" />
+          <img
+            class="w-100"
+            src="./images/JAMweb2.jpg"
+            alt="children sitting on the floor in a circle"
+          />
         </div>
       </div>
 
       <div class="row pt-3 mx-auto">
         <div class="col-lg-6 align-self-center">
-          <img class="w-100" src="./images/JAMweb3.jpg" />
+          <img
+            class="w-100"
+            src="./images/JAMweb3.jpg"
+            alt="children playing floor game (camel carrying a load)"
+          />
         </div>
         <div class="col-lg-6 align-self-center pt-3 pt-lg-0">
-          <img class="w-100" src="./images/JAMweb4.jpg" />
+          <img
+            class="w-100"
+            src="./images/JAMweb4.jpg"
+            alt="children at a round table listening to a story"
+          />
         </div>
       </div>
     </div>
