--- a/beliefs.html
+++ b/beliefs.html
@@ -152,7 +152,11 @@
       </div>
       <div class="row text-center pt-3 mx-auto">
         <div class="col">
-          <img class="w-50" src="./images/churchFaith.jpg" />
+          <img
+            class="w-50"
+            src="./images/churchFaith.jpg"
+            alt="congregation and choir"
+          />
         </div>
       </div>
     </div>
