--- a/staff.html
+++ b/staff.html
@@ -143,7 +143,7 @@
                 <div class="flex-shrink-0 mb-3 mb-lg-0">
                   <img
                     src="./images/PastorBeth2.jpg"
-                    alt="Generic placeholder image"
+                    alt="Rev. Beth Harbaugh"
                     class="img-fluid profile-img"
                   />
                 </div>
@@ -173,7 +173,7 @@
                 <div class="flex-shrink-0 mb-3 mb-lg-0">
                   <img
                     src="./images/JAM_logo.png"
-                    alt="Generic placeholder image"
+                    alt="JAM = Jesus and Me (logo)"
                     class="img-fluid profile-img"
                   />
                 </div>
@@ -201,7 +201,7 @@
                 <div class="flex-shrink-0 mb-3 mb-lg-0">
                   <img
                     src="./images/JessJaspers.jpg"
-                    alt="Generic placeholder image"
+                    alt="Kids Care director"
                     class="img-fluid profile-img"
                   />
                 </div>
@@ -229,7 +229,7 @@
                 <div class="flex-shrink-0 mb-3 mb-lg-0">
                   <img
                     src="./images/Shirlee.jpg"
-                    alt="Generic placeholder image"
+                    alt="Administrative Assistant"
                     class="img-fluid profile-img"
                   />
                 </div>
@@ -257,7 +257,7 @@
                 <div class="flex-shrink-0 mb-3 mb-lg-0">
                   <img
                     src="./images/MikeCooper.jpg"
-                    alt="Generic placeholder image"
+                    alt="Organist and Choir Director"
                     class="img-fluid profile-img"
                   />
                 </div>
@@ -285,7 +285,7 @@
                 <div class="flex-shrink-0 mb-3 mb-lg-0">
                   <img
                     src="./images/MelLaake.jpg"
-                    alt="Generic placeholder image"
+                    alt="Pianist"
                     class="img-fluid profile-img"
                   />
                 </div>
@@ -313,7 +313,7 @@
                 <div class="flex-shrink-0 mb-3 mb-lg-0">
                   <img
                     src="./images/cleaning.jpg"
-                    alt="Generic placeholder image"
+                    alt="cleaning supplies"
                     class="img-fluid profile-img"
                   />
                 </div>
